--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -7,13 +7,15 @@
     android:id="@+id/card_view"
     android:layout_gravity="center"
     card_view:cardCornerRadius="4dp"
-    android:layout_margin="@dimen/cardview_default_elevation">
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:layout_margin="@dimen/cardview_compat_inset_shadow">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/my_text_view"
-        android:longClickable="true"/>
+        android:id="@+id/my_text_view" />
 
 
 </android.support.v7.widget.CardView>
